# paper-cleaning

./: .gitignore  .pdm-python  README.md  pyproject.toml
data/: nicosia_buffered_bounds.gpkg
deprecated/: eu_road_stats_prep.py  eu_road_stats_vis.py  eu_roads_prep.py  eu_roads_prep_old.py  generate_osm_graphs.py
src/: amenities_download.py  cleaning.py  eu_road_stats_prep.py  eu_road_stats_vis.py  eu_roads_prep.py  generate_osm_graphs.py  madrid_clean.py  network_auto_clean.py  network_auto_clean_rid.py  nicosia_clean.py  road_types.py  util.py
