[project]
name = "paper-cleaning"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gareth Simons", email = "gareth.simons@ucl.ac.uk"},
]
dependencies = [
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
    "pandas>=2.2.1",
    "geopandas>=0.14.3",
    "numpy>=1.26.4",
    "cityseer>=4.13.1",
    "jupyterlab>=4.1.5",
    "ipykernel>=6.29.3",
    "tqdm>=4.66.5",
    "psycopg[binary]>=3.2.1",
    "sqlalchemy>=2.0.32",
    "pyproj>=3.6.1",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = {text = "AGPL-3.0"}

[tool.pdm]
distribution = false
