[project]
name = "paper-cleaning"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Gareth Simons", email = "gareth.simons@ucl.ac.uk" }]
dependencies = [
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
    "pandas>=2.2.3",
    "geopandas>=1.0.1",
    "numpy>=2.1.3",
    "cityseer>=4.17.1",
    "jupyterlab>=4.1.5",
    "ipykernel>=6.29.3",
    "tqdm>=4.66.5",
    "psycopg[binary]>=3.2.1",
    "sqlalchemy>=2.0.32",
    "pyproj>=3.6.1",
    "osmnx>=1.9.3",
    "shapely>=2.0.6",
]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = { text = "AGPL-3.0" }

[tool.uv]
dev-dependencies = ["ruff>=0.6.5"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
